--- a/slides/lecture9.qmd
+++ b/slides/lecture9.qmd
@@ -1075,8 +1075,7 @@ $$
 
 ### Intuition
 
-Compute expected # of heads for each coin and divide by expected #
-of flips.
+Compute expected # of heads for each coin and divide by expected # of flips.
 
 \medskip\pause
 
@@ -1097,50 +1096,52 @@ of flips.
 set.seed(1)
 n <- 1000
 heads <- {
-  ind <- sample(c(TRUE,FALSE), n, TRUE)
+  ind <- sample(c(TRUE, FALSE), n, TRUE)
   rbinom(n, 10, ifelse(ind, 0.8, 0.4))
 }
 maxit <- 20
-theta <- c(0.6, 0.5)   # start
-theta_hist <- matrix(NA, nrow=maxit, ncol=2)
-colnames(theta_hist) <- c("thetaA","thetaB")
+theta <- c(0.6, 0.5) # start
+theta_hist <- matrix(NA, nrow = maxit, ncol = 2)
+colnames(theta_hist) <- c("thetaA", "thetaB")
 loglik <- numeric(maxit)
 
-for(t in 1:maxit){
+for (t in 1:maxit) {
   # record before update
-  theta_hist[t,] <- theta
+  theta_hist[t, ] <- theta
   pA <- dbinom(heads, 10, theta[1])
   pB <- dbinom(heads, 10, theta[2])
-  mix <- 0.5*pA + 0.5*pB
+  mix <- 0.5 * pA + 0.5 * pB
   loglik[t] <- sum(log(mix))
-  if(t == maxit) break
-  gamma <- pA / (pA + pB)   # responsibilities
+  if (t == maxit) {
+    break
+  }
+  gamma <- pA / (pA + pB) # responsibilities
   theta[1] <- sum(gamma * heads) / (10 * sum(gamma))
-  theta[2] <- sum((1-gamma) * heads) / (10 * sum(1-gamma))
+  theta[2] <- sum((1 - gamma) * heads) / (10 * sum(1 - gamma))
 }
 
 matplot(
   1:maxit,
   theta_hist,
-  type="b",
-  pch=19,
-  col=c("blue", "red"),
-  lty=1,
-  xlab="Iteration",
-  ylab=expression(hat(theta)),
-  ylim=c(0, 1)
+  type = "b",
+  pch = 19,
+  col = c("blue", "red"),
+  lty = 1,
+  xlab = "Iteration",
+  ylab = expression(hat(theta)),
+  ylim = c(0, 1)
 )
 abline(
-  h=c(0.8,0.4),
-  col=c("blue","red"),
-  lty=2
+  h = c(0.8, 0.4),
+  col = c("blue", "red"),
+  lty = 2
 )
 legend(
   "bottomright",
-  legend=c(expression(hat(theta)[A]), expression(hat(theta)[B])),
-  col=c("blue", "red"),
-  lty=c(1, 1),
-  pch=c(19, 19)
+  legend = c(expression(hat(theta)[A]), expression(hat(theta)[B])),
+  col = c("blue", "red"),
+  lty = c(1, 1),
+  pch = c(19, 19)
 )
 ```
 
@@ -1154,17 +1155,17 @@ legend(
 plot(
   1:maxit,
   max(loglik) - loglik + 1e-10,
-  type="b",
-  pch=19,
-  xlab="Iteration",
-  ylab=expression(max(l) - l),
+  type = "b",
+  pch = 19,
+  xlab = "Iteration",
+  ylab = expression(max(l) - l),
   log = "y"
 )
 ```
 
 ## Connection to $Q$-Function
 
-Recall: 
+Recall:
 $$
 Q(\theta \mid \theta^{(t)}) = \E_{Z \mid X, \theta^{(t)}}[\log p(X,Z \mid \theta)]
 $$
@@ -1180,14 +1181,16 @@ $$
 
 . . .
 
-- **E-step:** compute $\gamma_{i}^{(t)}$, the expected values
-  (responsibilities) of the latent variables.
+- **E-step:** compute $\gamma_{i}^{(t)}$, the expected values (responsibilities)
+  of the latent variables.
 - **M-step:** maximize $Q$ with respect to $\theta_A$ and $\theta_B$: weighted
   averages of heads.
 
 \medskip\pause
 
-Intuition: $Q$ is the expected complete-data log-likelihood; EM alternates between **expectation** (filling in latent variables) and **maximization** (updating parameters).
+Intuition: $Q$ is the expected complete-data log-likelihood; EM alternates
+between **expectation** (filling in latent variables) and **maximization**
+(updating parameters).
 
 ## Summary
 
