Fix problem with equation in assignment 3B
Using w_i is redundant in the second equation.

--- a/assignments/assignment3.qmd
+++ b/assignments/assignment3.qmd
@@ -72,7 +72,7 @@ parameter $\mu \in \mathbb{R}$, scale parameter $\sigma > 0$, and shape
 parameter $\nu > 0$. You can initially regard $\nu$ as fixed. Maximize the
 complete data log-likelihood
 $$
-\sum_{i=1}^n \log f(y_i, w_i)
+\sum_{i=1}^n \log f(y_i)
 $$
 for i.i.d. observations over $(\mu, \sigma^2)$ and implement this as a function.
 Then implement the EM algorithm for estimating $(\mu, \sigma^2)$, compare it
